@@ -149,6 +149,9 @@ tc.assertEqual(spot.is_partially_degeneralizable(de), [])
 df = spot.partial_degeneralize(f, [0, 1])
 df.equivalent_to(f)
 tc.assertEqual(str(df.acc()), '(1, Fin(0))')
+df2 = spot.degeneralize(f)
+df.equivalent_to(f)
+tc.assertEqual(str(df2.acc()), '(1, Fin(0))')
 
 try:
     df = spot.partial_degeneralize(f, [0, 1, 2])
@@ -206,6 +209,16 @@ pdaut7 = spot.partial_degeneralize(aut7, sets)
 tc.assertTrue(pdaut7.equivalent_to(aut7))
 tc.assertEqual(daut7.num_states(), 10)
 tc.assertEqual(pdaut7.num_states(), 10)
+ddaut7 = spot.dualize(aut7)
+ddaut7a = spot.scc_filter(spot.dualize(spot.degeneralize_tba(ddaut7)))
+tc.assertTrue(ddaut7a.equivalent_to(aut7))
+tc.assertEqual(ddaut7a.num_states(), daut7.num_states())
+ddaut7b = spot.scc_filter(spot.dualize(spot.to_nca(ddaut7)))
+tc.assertTrue(ddaut7b.equivalent_to(aut7))
+tc.assertEqual(ddaut7b.num_states(), daut7.num_states())
+ddaut7c = spot.scc_filter(spot.dualize(spot.to_dca(ddaut7)))
+tc.assertTrue(ddaut7c.equivalent_to(aut7))
+tc.assertEqual(ddaut7c.num_states(), daut7.num_states())
 
 aut8 = spot.automaton("""HOA: v1 States: 8 Start: 0 AP: 3 "p0" "p1" "p2"
 acc-name: generalized-Buchi 5 Acceptance: 5 Inf(0)&Inf(1)&Inf(2)&Inf(3)&Inf(4)
